deployment/assignment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assignment-service
  namespace: lms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assignment-service
  template:
    metadata:
      labels:
        app: assignment-service
    spec:
      containers:
        - name: assignment-service
          image: assignment_service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: assignment-service
  namespace: lms
spec:
  selector:
    app: assignment-service
  ports:
    - name: http
      protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
