deployment/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: lms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: registry.digitalocean.com/lms-registry333/auth-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: lms
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
