deployment/course-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-service
  namespace: lms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course-service
  template:
    metadata:
      labels:
        app: course-service
    spec:
      containers:
        - name: course-service
          image: registry.digitalocean.com/lms-registry333/course-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: course-service
  namespace: lms
spec:
  selector:
    app: course-service
  ports:
    - name: http
      protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
