deployment/eureka-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: registry.digitalocean.com/lms-registry333/eureka-server:latest
          imagePullPolicy: Never   # 🔥 this is the key
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
spec:
  selector:
    app: eureka-server
  ports:
    - port: 8761
      targetPort: 8761
  type: ClusterIP
