deployment/resource-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-service
  namespace: lms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resource-service
  template:
    metadata:
      labels:
        app: resource-service
    spec:
      containers:
        - name: resource-service
          image: resource_service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: resource-service
  namespace: lms
spec:
  selector:
    app: resource-service
  ports:
    - name: http
      protocol: TCP
      port: 8084
      targetPort: 8084
  type: ClusterIP
